# mentora-backend-challenge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
src/: runserver.py  scripts.py
src/config/: asgi.py  entrypoint.sh  settings.py  urls.py  wsgi.py
src/modules/feedback/: admin.py  apps.py  handlers.py
src/modules/feedback/infra/migrations/: 0001_initial.py  0002_alter_feedbackmodel_created_at.py  0003_alter_feedbackmodel_created_at.py
src/modules/feedback/models/: __init__.py  feedback.py
src/modules/feedback/schemas/: __init__.py  create_feedback.py  feedback.py
src/modules/feedback/use_cases/: __init__.py  create_feedback.py  list_feedbacks_by_id.py  list_feedbacks_by_mentoring_id.py
src/modules/mentoring/: admin.py  apps.py  handlers.py
src/modules/mentoring/__tests__/: handler_test.py
src/modules/mentoring/infra/migrations/: 0001_initial.py
src/modules/mentoring/infra/seeds/: 0001_mentoring.json
src/modules/mentoring/models/: __init__.py  mentoring.py
src/modules/mentoring/schemas/: __init__.py  mentoring.py  simple_mentoring.py
src/modules/mentoring/use_cases/: __init__.py  get_by_id.py  list_all.py
