[tool.poetry]
name = "mentora-backend-challenge"
version = "0.1.0"
description = ""
authors = ["Pablo Pessanha <pablopessanh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-ninja = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
